--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,7 @@ dependencies {
     implementation 'cn.bingoogolapple:bga-banner:2.2.5'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
+    implementation 'com.zhihu.android:matisse:0.5.1'
+    implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
+    implementation 'top.zibin:Luban:1.1.7'
 }
