--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.zhwy.app.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths_public" />
+        </provider>
         <activity android:name=".activity.ChoiceActivity" android:screenOrientation="portrait" android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,6 +40,20 @@
         <activity android:name=".activity.MainActivity" android:launchMode="singleTask" android:screenOrientation="portrait"/>
         <!--通知公告-->
         <activity android:name=".activity.NoticeActivity" android:screenOrientation="portrait" android:launchMode="singleTop"/>
+        <!--通知详情-->
+        <activity android:name=".activity.NoticeDetailsActivity" android:launchMode="singleTop" android:screenOrientation="portrait"/>
+        <!--发布通知-->
+        <activity android:name=".activity.NoticeAddActivity" android:screenOrientation="portrait" android:launchMode="singleTop"/>
+        <!--物业报修/投诉界面-->
+        <activity android:name=".activity.RepairActivity" android:launchMode="singleTop" android:screenOrientation="portrait"/>
+        <!--报修/投诉详情-->
+        <activity android:name=".activity.RepairDetailsActivity" android:screenOrientation="portrait" android:launchMode="singleTop"/>
+        <!--提交报修/维修-->
+        <activity android:name=".activity.RepaireAddActivity" android:launchMode="singleTop" android:screenOrientation="portrait"/>
+        <!--安保-->
+        <activity android:name=".activity.SecurityActivity" android:screenOrientation="portrait" android:launchMode="singleTop"/>
+        <!--安保录入-->
+        <activity android:name=".activity.SecurityAddActivity" android:launchMode="singleTop" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
