--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,8 @@ dependencies {
     implementation 'com.zhihu.android:matisse:0.5.1'
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
     implementation 'top.zibin:Luban:1.1.7'
+    //    ==================选择器=========================
+    implementation 'com.contrarywind:Android-PickerView:4.1.6'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.romandanylyk:pageindicatorview:1.0.3'
 }
