--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -50,7 +50,7 @@ dependencies {
     //    ==================百分百布局=====================
     implementation 'com.android.support:percent:27.1.1'
     // LeanCloud 基础包
-    compile ('cn.leancloud.android:avoscloud-sdk:4.7.9')
+    compile 'cn.leancloud.android:avoscloud-sdk:4.7.9'
     implementation 'cn.bingoogolapple:bga-banner:2.2.5'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
@@ -61,4 +61,12 @@ dependencies {
     implementation 'com.contrarywind:Android-PickerView:4.1.6'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.romandanylyk:pageindicatorview:1.0.3'
+    //    ===================联网==========================
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation files('libs/commons-codec-1.12.jar')
 }
