--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,10 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
     <!-- 基础模块 END -->
     <application
         android:allowBackup="true"
@@ -67,6 +71,8 @@
         <activity android:name=".activity.PayDetailsActivity" android:screenOrientation="portrait" android:launchMode="singleTop"/>
         <!--关于我们-->
         <activity android:name=".activity.AboutActivity" android:screenOrientation="portrait" android:launchMode="singleTop"/>
+        <!--实名认证-->
+        <activity android:name=".activity.ShiMingActivity" android:screenOrientation="portrait" android:launchMode="singleTop"/>
     </application>
 
 </manifest>
